# autoagent-v3

./: .gitignore  ARCHITECTURE.md  Makefile  PLAN.md  README.md  V3_BRIEF.md  docker-compose.yml  package-lock.json  screenshot.mjs
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260322_0001_initial_schema.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: agents.py  deploy.py  deps.py  error_handling.py  evals.py  experiments.py  library.py  router.py  sessions.py  trees.py
backend/app/core/: config.py  database.py  live.py
backend/app/engine/: __init__.py  briefing_generator.py  cross_tree_validator.py  eval_generator.py  pareto_scorer.py  proposer.py  research_memory_manager.py  scoped_eval_runner.py  strategy_generator.py  tree_analyzer.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py
backend/app/schemas/: __init__.py  domain.py
backend/app/tasks/: celery_app.py  training.py
backend/tests/: conftest.py  test_api_error_handling.py  test_api_flow.py  test_app.py  test_engine.py  test_models.py  test_seed.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentTreeVisualizer.tsx  ConversationReplay.tsx  HealthScan.tsx  RoutingFlow.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: agentStudio.test.ts  agentStudio.ts  api.ts  constants.ts  mockData.ts
frontend/src/pages/: AgentStudio.test.tsx  (+8 more)
(+2 files in other folders)
